low-ops multi node installation

--- a/docs/02-quick-start/03-aws-single-node-installation.mdx
+++ b/docs/02-quick-start/03-aws-single-node-installation.mdx
@@ -41,7 +41,7 @@ Login to the AWS Console, navigate to the EC2 service and click on "Launch Insta
 
 Configure instance `Name` and `OS AMI type` (Tested on Ubuntu 22.04).
 
-<img src="/img/os-image-name.png" alt="Select Image" className="image" />
+<img src="/img/os-image-name.png" alt="OS Image Name" className="image" />
 
 ---
 
