--- a/docs/04-getting-started/01-mendix-applications.mdx
+++ b/docs/04-getting-started/01-mendix-applications.mdx
@@ -4,13 +4,14 @@ title: Mendix Applications
 
 # Getting Started with Mendix
 
-:::info
-This document guides you through creating and deploying new application versions in the Low-Ops using Mendix Studio Pro.
-:::
+:::info This document guides you through creating and deploying new application versions in the Low-Ops using Mendix
+Studio Pro. :::
 
 ## Overview
 
-Mendix Studio Pro is a powerful low-code development environment that allows developers to rapidly build and customize enterprise-grade applications. This guide covers the entire process, from accessing the Git repository to making changes in Mendix Studio Pro and verifying them across different environments.
+Mendix Studio Pro is a powerful low-code development environment that allows developers to rapidly build and customize
+enterprise-grade applications. This guide covers the entire process, from accessing the Git repository to making changes
+in Mendix Studio Pro and verifying them across different environments.
 
 :::warning Requirements
 
@@ -19,9 +20,8 @@ Mendix Studio Pro is a powerful low-code development environment that allows dev
 
 :::
 
-:::note
-For instructions on logging into the Low-Ops portal, refer to the [Login tutorial](../platform/login.md).
-:::
+:::note For instructions on logging into the Low-Ops portal, refer to the
+[Authentication tutorial](/docs/platform/authantications). :::
 
 ## Creating a New Application Version
 
@@ -41,7 +41,12 @@ For instructions on logging into the Low-Ops portal, refer to the [Login tutoria
 
 **Step 1.** In Mendix Studio Pro, click the "Open Private App" button.
 
-<img src="/old-images/open_private_app.jpg" width="500" alt="Open Private App button in Mendix Studio Pro" class="shadow" />
+<img
+  src="/old-images/open_private_app.jpg"
+  width="500"
+  alt="Open Private App button in Mendix Studio Pro"
+  class="shadow"
+/>
 
 ---
 
@@ -93,15 +98,14 @@ For instructions on logging into the Low-Ops portal, refer to the [Login tutoria
 
 **Step 1.** Navigate to the Activity tab
 
-:::note
-To learn how to access Activity tab, follow the steps from the [Activities tutorial](../application/activities.md)
+:::note To learn how to access Activity tab, follow the steps from the [Activity tutorial](/docs/application/activity)
 :::
 
 ---
 
 **Step 2.** The status of the changes made will be "Completed".
 
-<img src="/old-images/activities.jpg" width="500" alt="Activity tab"  class="shadow" />
+<img src="/old-images/activities.jpg" width="500" alt="Activity tab" class="shadow" />
 
 ---
 
@@ -109,17 +113,21 @@ To learn how to access Activity tab, follow the steps from the [Activities tutor
 
 **Step 1.** Go to the "Environments" tab and select an environment.
 
-<img src="/old-images/environments_overview.jpg" width="500" alt="Environments overview in Low-Ops platform"  class="shadow" />
+<img
+  src="/old-images/environments_overview.jpg"
+  width="500"
+  alt="Environments overview in Low-Ops platform"
+  class="shadow"
+/>
 
 ---
 
 **Step 2.** In the left-side menu, go to "Access".
 
-<img src="/old-images/access.jpg" width="500" alt="Access tab"  class="shadow" />
+<img src="/old-images/access.jpg" width="500" alt="Access tab" class="shadow" />
 
-:::note
-To learn how to access "Access" tab, follow the steps from the [Access tutorial](../application/environments/access.md)
-:::
+<!-- :::note To learn how to access "Access" tab, follow the steps from the
+[Access tutorial](/docs/application/environments/security) ::: -->
 
 ### Verify Changes in Mendix
 
