azure single node installation

--- a/docs/05-application/01-environments.mdx
+++ b/docs/05-application/01-environments.mdx
@@ -2,4 +2,29 @@
 title: Environments
 ---
 
-# Environments
+### Overview
+
+Environments represent different stages of application deployment, such as `development`, `testing`, `staging`, and
+`production`. Each environment has its own set of configurations, resources, and permissions. Environments give you an
+isolated instance of all services in a project.
+
+In a Low-Ops, you can easily create and manage environments for every stage of your application, ensuring smooth
+deployment and seamless operations.
+
+### Accessing Environments
+
+To access the Environments page, navigate to the `Application > Environments` tab in the Low-Ops.
+
+### Creating an Environment
+
+To create an environment, click the "Create Environment" button in the top right corner of the Environments page.
+
+Give your environment a name and select the type of environment you want to create.
+
+### Environment Details
+
+`Application > Environments > {Environment Name}`
+
+### Deleting an Environment
+
+To delete an environment, from environment settings screen, click the `Delete Environment` button.
