--- a/docs/05-application/02-packages.mdx
+++ b/docs/05-application/02-packages.mdx
@@ -2,4 +2,20 @@
 title: Packages
 ---
 
-# Packages
+### Overview
+
+The packages allows you to view and manage build versions, providing insight into your application's development history
+and enabling you to track changes over time.
+
+### View Packages
+
+To view packages, navigate to the `Application > Packages` tab in the Low-Ops.
+
+### Create a Package
+
+To create a package, navigate to the `Application > Packages` tab in the Low-Ops and click the `Create Package` button.
+
+### Package Details
+
+To view the details of a package, navigate to the `Application > Packages` tab in the Low-Ops and click the package
+name.
