--- a/docs/01-introduction/02-what-is-low-ops.mdx
+++ b/docs/01-introduction/02-what-is-low-ops.mdx
@@ -16,3 +16,17 @@ Without Low-Ops, an organization would need to hire a team of DevOps, Cloud engi
 and maintain a platform for running applications. This is a costly and time-consuming process. Low-Ops solves this
 problem by providing a platform that is easy to use and requires minimal maintenance. This allows organizations to focus
 on their core business and deliver value to their customers.
+
+### Philosophy
+
+Deploying components onto Kubernetes is not rocket science. However, having the platform to be reproducible, scalable,
+and maintainable is a challenge. Low-Ops is designed to be easy to use and requires minimal maintenance. It is designed
+to be used by developers and operators with minimal knowledge of Kubernetes and cloud infrastructure. You will be able
+to do all your tasks through the Low-Ops Portal supported with best practices of delivering applications to your
+business and customers.
+
+Because the whole platform is fully automated and runs on your infrastructure, you have 100% control over your data and
+can be sure that it is secure. You can also easily integrate it with your existing systems and processes.
+
+Don't want or need upgradability of Low-Ops? You can modify it to fit your needs. You can also use it as a starting
+point for your own platform.
