--- a/docs/02-quick-start/02-single-node-installation.mdx
+++ b/docs/02-quick-start/02-single-node-installation.mdx
@@ -2,8 +2,8 @@
 title: Single Node Installation
 ---
 
-The single node version of the Low-Ops platform allows you to run Low-Ops on a single Linux machine, making it ideal for
-testing purposes.
+The single node version of the Low-Ops allows you to run Low-Ops on a single Linux machine, making it ideal for testing
+purposes.
 
 :::warning
 
