--- a/docs/05-application/01-environments.mdx
+++ b/docs/05-application/01-environments.mdx
@@ -15,16 +15,25 @@ deployment and seamless operations.
 
 To access the Environments page, navigate to the `Application > Environments` tab in the Low-Ops.
 
+<img src="/img/environments.png" alt="Environments" className="image" />
+
 ### Creating an Environment
 
-To create an environment, click the "Create Environment" button in the top right corner of the Environments page.
+To create an environment, click the `Create new environment` button Environments tab. Give your environment a name and
+press `Create`. All resources will be created in the new environment.
 
-Give your environment a name and select the type of environment you want to create.
+<img src="/img/create-environment.png" alt="Create Environment" className="image" />
 
 ### Environment Details
 
-`Application > Environments > {Environment Name}`
+To view environment details, navigate to `Application > Environments > [Environment Name]`.
+
+<img src="/img/environment-details.png" alt="Environment Details" className="image" />
 
 ### Deleting an Environment
 
-To delete an environment, from environment settings screen, click the `Delete Environment` button.
+To delete an environment, navigate to environment settings screen and click the `Delete Environment` button on bottom of
+the screen.
+
+<img src="/img/environment-settings.png" alt="Delete Settings" className="image" />
+<img src="/img/delete-environment.png" alt="Delete Environment" className="image" />
