--- a/docs/05-application/03-source.mdx
+++ b/docs/05-application/03-source.mdx
@@ -2,4 +2,22 @@
 title: Source
 ---
 
-# Source
+Source connects your application to a private Gitea repository.
+
+## Connect to Source
+
+### <span style={{ fontSize: "1.2rem" }}>**Step 1.** Go to `Application > Source`</span>
+
+### <span style={{ fontSize: "1.2rem" }}>**Step 2.** Copy the Source URL</span>
+
+### <span style={{ fontSize: "1.2rem" }}>**Step 3.** Clone the repository</span>
+
+### <span style={{ fontSize: "1.2rem" }}>**Step 4.** Push and pull changes as needed</span>
+
+<img src="/img/source-screen.png" alt="Source screen" className="image" />
+
+:::tip
+
+Keep your branches and commits organized for better project tracking.
+
+:::
