--- a/docs/05-application/05-settings.mdx
+++ b/docs/05-application/05-settings.mdx
@@ -2,4 +2,8 @@
 title: Settings
 ---
 
-# Settings
+Settings screen is used to configure the application.
+
+You can change the application description and delete the application.
+
+<img src="/img/app-settings.png" alt="App settings" className="image" />
