--- a/docs/03-installation/01-overview.mdx
+++ b/docs/03-installation/01-overview.mdx
@@ -9,7 +9,11 @@ import MyCard from "@site/src/components/MyCard";
 <div className="row">
 
 <div className="col col--6 margin-bottom--md">
-  <MyCard title="Multi-Node Installation" content="Coming soon..." link="/docs/installation/multi-node-installation" />
+  <MyCard
+    title="Multi-Node Installation"
+    content="The platform foundation..."
+    link="/docs/installation/multi-node-installation"
+  />
 </div>
 
 <div className="col col--6 margin margin-bottom--md">
