--- a/docs/06-environment/01-deployment.mdx
+++ b/docs/06-environment/01-deployment.mdx
@@ -2,4 +2,40 @@
 title: Deployment
 ---
 
-# Deployment
+There are three ways to access the `Environment Deployment`
+
+1. From the `Environments` tab, at `Application > Environments`
+2. From the `Packages` tab, at `Application > Packages`
+3. From the `Environment Overview` page, at `Application > Environment > Overview`
+
+### Deployment from `Environments`
+
+<img src="/img/environments-deployment.png" alt="Environments Deployment" className="image" />
+
+### Deployment from `Packages`
+
+<img src="/img/packages-deployment.png" alt="Packages Deployment" className="image" />
+
+### Deployment from `Environment Overview`
+
+<img src="/img/overview-deployment.png" alt="Environment Overview Deployment" className="image" />
+
+### Deploying the Environment
+
+In the deployment panel, make sure you are select correct environment and package.
+
+Check the Acknowledgement and click on `Deploy` button.
+
+You will see the `Deploying` status on your environment.
+
+<img src="/img/deploying-status.png" alt="Deploying Status" className="image" />
+
+Once the deployment is complete, you will see the `Running` status on your environment.
+
+<img src="/img/running-status.png" alt="Running Status" className="image" />
+
+### Mendix app deployment
+
+When you deploy a `Mendix app` you can also configure `Constants` and `Scheduled Events`.
+
+<img src="/img/constants-scheduled.png" alt="Constants and Scheduled Events" className="image" />
