--- a/docs/01-introduction/02-what-is-low-ops.mdx
+++ b/docs/01-introduction/02-what-is-low-ops.mdx
@@ -2,6 +2,10 @@
 title: What is Low-Ops ?
 ---
 
+Low-Ops is an Internal Developer Platform (IDP) designed specifically for private cloud and on-premise deployments. It
+transforms your existing infrastructure into a secure, powerful platform for Mendix app development and deployment, all
+within your controlled environment.
+
 ### Internal Developer Platform
 
 Low-Ops is a internal developer platform for running applications in a cloud environment. It is designed to be easy to
