--- a/docs/05-application/04-activity.mdx
+++ b/docs/05-application/04-activity.mdx
@@ -2,6 +2,8 @@
 title: Activity
 ---
 
+### Overview
+
 Activity is designed for recording `events` and `actions` within the system for the purpose of `Monitoring`,
 `Analyzing`, and `Ensuring accountability`.
 
