--- a/docs/06-environment/01-deployment.mdx
+++ b/docs/06-environment/01-deployment.mdx
@@ -2,7 +2,10 @@
 title: Deployment
 ---
 
-There are three ways to access the `Environment Deployment`
+### Overview
+
+Deployment are how you publish your application to the internet. There are three ways to access the
+`Environment Deployment`
 
 1. From the `Environments` tab, at `Application > Environments`
 2. From the `Packages` tab, at `Application > Packages`
@@ -25,6 +28,8 @@ There are three ways to access the `Environment Deployment`
 In the deployment panel, make sure you are select correct environment and package.
 
 Check the Acknowledgement and click on `Deploy` button.
+
+<img src="/img/deploy-environment.png" alt="Deploy Environment" className="image" />
 
 You will see the `Deploying` status on your environment.
 
