--- a/docs/05-application/04-activity.mdx
+++ b/docs/05-application/04-activity.mdx
@@ -13,6 +13,12 @@ events within the platform or applications
 
 <img src="/img/activity-screen.png" alt="Activity Screen" className="image" />
 
+### Activity Details
+
+To view the activity details, navigate to the `Activity` screen and click on the activity you want to view.
+
+<img src="/img/activity-details.png" alt="Activity Details" className="image" />
+
 :::tip
 
 Regular review of Activity can help maintain security, track changes, and ensure compliance with organizational
