search, overview and auto generated links for pages

--- a/docs/01-introduction/01-overview.mdx
+++ b/docs/01-introduction/01-overview.mdx
@@ -2,22 +2,6 @@
 title: Overview
 ---
 
-import MyCard from "@site/src/components/MyCard";
-
-<div className="row">
-  <div className="col col--6 margin-bottom--lg">
-    <MyCard
-      title="What is Low-Ops?"
-      content="Low-Ops Internal developer platform..."
-      link="/docs/introduction/what-is-low-ops"
-    />
-  </div>
-
-  <div className="col col--6 margin-bottom--lg">
-    <MyCard
-      title="Low-Ops Key Features"
-      content="Easy to use, self-service..."
-      link="/docs/introduction/low-ops-key-features"
-    />
-  </div>
-</div>
+Low-Ops is an Internal Developer Platform (IDP) designed specifically for private cloud and on-premise deployments. It
+transforms your existing infrastructure into a secure, powerful platform for application development and deployment, all
+within your controlled environment.
