--- a/docs/01-introduction/03-low-ops-key-features.mdx
+++ b/docs/01-introduction/03-low-ops-key-features.mdx
@@ -4,6 +4,9 @@ title: Low-Ops Key Features
 
 import MyCard from "@site/src/components/MyCard";
 
+Low-Ops provides a comprehensive set of features designed to simplify infrastructure management while ensuring
+reliability, security, and cost-effectiveness.
+
 <div className="row">
   <div className="col col--6 margin-bottom--lg">
     <MyCard
