gettings started section

--- a/docs/07-administration/05-app-templates.mdx
+++ b/docs/07-administration/05-app-templates.mdx
@@ -2,8 +2,6 @@
 title: Templates
 ---
 
-### Overview
-
 Templates are used to create applications. They are used to define the structure of the application. Low-Ops comes with
 predefined templates, but you can also create your own templates.
 
@@ -19,3 +17,7 @@ To create a new template, navigate to the `Administration > Templates` screen.
 
 To delete a template, navigate to the `Administration > Templates` screen and click on the `Delete` button in the
 template table menu.
+
+<!-- Upload templates in `Administration > Templates`.
+Choose the correct template type (e.g., `Mendix` for Mendix applications). Use `Generic` type if no specific type
+matches your template. -->
