fixing spelling mistakes

--- a/docs/05-application/01-overview.mdx.mdx
+++ b/docs/05-application/01-overview.mdx.mdx
@@ -2,4 +2,4 @@
 title: Overview
 ---
 
-This guide will provide you information about the application and how to manage it.
+This guide provides information about the application and how to manage it.
