--- a/docs/05-application/02-environments.mdx
+++ b/docs/05-application/02-environments.mdx
@@ -3,22 +3,22 @@ title: Environments
 ---
 
 Environments represent different stages of application deployment, such as `development`, `testing`, `staging`, and
-`production`. Each environment has its own set of configurations, resources, and permissions. Environments give you an
-isolated instance of all services in a project.
+`production`. Each environment has its own set of configurations, resources, and permissions. Environments provide you
+with an isolated instance of all services in a project.
 
-In a Low-Ops, you can easily create and manage environments for every stage of your application, ensuring smooth
+In Low-Ops, you can easily create and manage environments for every stage of your application, ensuring smooth
 deployment and seamless operations.
 
 ### Accessing Environments
 
-To access the Environments page, navigate to the `Application > Environments` tab in the Low-Ops.
+To access the Environments page, navigate to the `Application > Environments` tab in Low-Ops.
 
 <img src="/img/environments.png" alt="Environments" className="image" />
 
 ### Creating an Environment
 
-To create an environment, click the `Create new environment` button Environments tab. Give your environment a name and
-press `Create`. All resources will be created in the new environment.
+To create an environment, click the `Create new environment` button in the Environments tab. Give your environment a
+name and click `Create`. All resources will be created in the new environment.
 
 <img src="/img/create-environment.png" alt="Create Environment" className="image" />
 
@@ -30,8 +30,8 @@ To view environment details, navigate to `Application > Environments > [Environm
 
 ### Deleting an Environment
 
-To delete an environment, navigate to environment settings screen and click the `Delete Environment` button on bottom of
-the screen.
+To delete an environment, navigate to the environment settings screen and click the `Delete Environment` button at the
+bottom of the screen.
 
 <img src="/img/environment-settings.png" alt="Delete Settings" className="image" />
 <img src="/img/delete-environment.png" alt="Delete Environment" className="image" />
