--- a/docs/05-application/03-packages.mdx
+++ b/docs/05-application/03-packages.mdx
@@ -2,31 +2,31 @@
 title: Packages
 ---
 
-The packages allows you to view and manage build versions, providing insight into your application's development history
-and enabling you to track changes over time.
+Packages allow you to view and manage build versions, providing insight into your application's development history and
+enabling you to track changes over time.
 
-Packages are created automatically when you push a new commit to the repository. All packages are avialiable for every
+Packages are created automatically when you push a new commit to the repository. All packages are available for every
 environment.
 
 ### View Packages
 
-To view packages, navigate to the `Application > Packages` tab in the Low-Ops.
+To view packages, navigate to the `Application > Packages` tab in Low-Ops.
 
 <img src="/img/packages.png" alt="Packages" className="image" />
 
 ### Package Details
 
-Some of the package details are available in the `Packages` table. There you can see the package name, version, jobs
-(vulnerability scanning, linting, unit tests), created at date, and actions.
+Some package details are available in the `Packages` table. There you can see the package name, version, jobs
+(vulnerability scanning, linting, unit tests), creation date, and actions.
 
-To view the all details of a package click the package name.
+To view all details of a package, click the package name.
 
 <img src="/img/package-details.png" alt="Package Details" className="image" />
 
 ### Package Description
 
-You can give a package a description to help you identify it. Simple open action menu in the `Packages table` and click
-`Edit description`.
+You can give a package a description to help you identify it. Simply open the action menu in the `Packages table` and
+click `Edit description`.
 
 <img src="/img/package-description.png" alt="Package edit description" className="image" />
 
@@ -42,7 +42,7 @@ potential issues in a timely manner.
 
 :::
 
-You can see the Vulnerabilities summary in the Packages screen under the `job` column. Also you can navigate to the
+You can see the Vulnerabilities summary in the Packages screen under the `job` column. You can also navigate to the
 package details `Application > Package > Vulnerabilities` screen to see full details of the vulnerabilities.
 
 <img src="/img/package-vulnerabilities.png" alt="Package vulnerabilities" className="image" />
@@ -55,11 +55,11 @@ code `quality` and `adherence` to development standards.
 :::note
 
 Consistently reviewing and addressing both Security Severity issues and Policy test results can significantly enhance
-the quality and security of your applications
+the quality and security of your applications.
 
 :::
 
-You can see the Best Practices summary in the Packages screen under the `job` column. Also you can navigate to the
+You can see the Best Practices summary in the Packages screen under the `job` column. You can also navigate to the
 package details `Application > Package > Best Practices` screen to see full details of the best practices.
 
 <img src="/img/package-best-practices.png" alt="Package best practices" className="image" />
@@ -69,7 +69,7 @@ package details `Application > Package > Best Practices` screen to see full deta
 Unit testing is a type of software testing where individual units or components of a software application are tested in
 isolation to verify their correctness.
 
-You can see the Unit Testing summary in the Packages screen under the `job` column. Also you can navigate to the package
+You can see the Unit Testing summary in the Packages screen under the `job` column. You can also navigate to the package
 details `Application > Package > Unit Testing` screen to see full details of the unit testing.
 
 <img src="/img/package-unit-testing.png" alt="Package unit testing" className="image" />
