--- a/docs/05-application/06-settings.mdx
+++ b/docs/05-application/06-settings.mdx
@@ -2,7 +2,7 @@
 title: Settings
 ---
 
-Settings screen is used to configure the application.
+The Settings screen is used to configure the application.
 
 You can change the application description and delete the application.
 
@@ -10,6 +10,6 @@ You can change the application description and delete the application.
 
 :::warning
 
-Deleting an application will delete all the resources associated with the application. This action is not reversible.
+Deleting an application will delete all the resources associated with the application. This action cannot be undone.
 
 :::
