--- a/docs/06-environment/01-overview.mdx.mdx
+++ b/docs/06-environment/01-overview.mdx.mdx
@@ -2,7 +2,7 @@
 title: Overview
 ---
 
-This guide will provide you information about the environment and how to manage it. Environment are essential part of
-the platform. Application can have many environments, for example `development`, `staging`, `production` etc.
+This guide will provide you information about the environment and how to manage it. Environments are essential part of
+the platform. Applications can have many environments, for example `development`, `staging`, `production` etc.
 Environments provide a way to manage the application lifecycle and deployment. You will get all services for each
 environment.
