--- a/docs/06-environment/02-deployment.mdx
+++ b/docs/06-environment/02-deployment.mdx
@@ -2,12 +2,12 @@
 title: Deployment
 ---
 
-Deployment are how you publish your application to the internet. There are three ways to access the
+Deployment is how you publish your application to the internet. There are three ways to access the
 `Environment Deployment`
 
-1. From the `Environments` tab, at `Application > Environments`
-2. From the `Packages` tab, at `Application > Packages`
-3. From the `Environment Overview` page, at `Application > Environment > Overview`
+1. From the `Environments` tab, in `Application > Environments`
+2. From the `Packages` tab, in `Application > Packages`
+3. From the `Environment Overview` page, in `Application > Environment > Overview`
 
 ### Deployment from `Environments`
 
@@ -23,9 +23,9 @@ Deployment are how you publish your application to the internet. There are three
 
 ### Deploying the Environment
 
-In the deployment panel, make sure you are select correct environment and package.
+In the deployment panel, make sure you select correct environment and package.
 
-Check the Acknowledgement and click on `Deploy` button.
+Check the acknowledgement and click on `Deploy` button.
 
 <img src="/img/deploy-environment.png" alt="Deploy Environment" className="image" />
 
