--- a/docs/06-environment/03-actions.mdx
+++ b/docs/06-environment/03-actions.mdx
@@ -2,11 +2,11 @@
 title: Actions
 ---
 
-Environment actions allow you to `Deploy`, `Start`, `Stop`, `Restart` the environment.
+Environment actions let you to `Deploy`, `Start`, `Stop`, `Restart` the environment.
 
 `Deploy` was already described in the [Deployment](/docs/environment/deployment) section.
 
-There are `2` places from where you can access to the actions:
+There are two places from where you can access to the actions:
 
 - `Application > Environments`
 - `Application > Environment > Overview`
@@ -15,17 +15,17 @@ There are `2` places from where you can access to the actions:
 
 ### Start environment
 
-You can start the environment by clicking on the `Start` button in the environment action menu. `Start` action will be
-available if the environment is `Stopped`.
+You can start the environment by clicking on the `Start` button in the environment action menu. The `Start` action will
+be available if the environment is `Stopped`.
 
 ### Stop environment
 
-You can stop the environment by clicking on the `Stop` button in the environment action menu. `Stop` action will be
+You can stop the environment by clicking on the `Stop` button in the environment action menu. The `Stop` action will be
 available if the environment is `Running`.
 
 ### Restart environment
 
-You can restart the environment by clicking on the `Restart` button in the environment action menu. `Restart` action
+You can restart the environment by clicking on the `Restart` button in the environment action menu. The `Restart` action
 will be available if the environment is `Running`.
 
 ### Environment statuses
