--- a/docs/06-environment/07-firewall.mdx
+++ b/docs/06-environment/07-firewall.mdx
@@ -4,7 +4,7 @@ title: Firewall
 
 import ReDeployLink from "@site/src/components/ReDeployLink";
 
-Firewall (IP filtering) serves to `restrict` or `allow` application access to specific IP address or IP ranges.
+The firewall (IP filtering) helps you `restrict` or `allow` application access to specific IP address or IP ranges.
 
 You can access the firewall by navigating to `Application > Environment > Firewall`.
 
@@ -20,13 +20,13 @@ clicking on the `Enter` button.
 
 ### Edit Firewall Rule
 
-You can edit firewall rule byt clicking on the `Edit` button on the firewalls table action menu.
+You can edit firewall rule byt clicking the `Edit` button on the firewalls table action menu.
 
 <img src="/img/firewall-action-menu.png" alt="Edit Firewall Rule" className="image" />
 
 ### Delete Firewall Rule
 
-You can delete a firewall rule by clicking on the `Delete` button on the firewalls action table menu.
+You can delete a firewall rule by clicking the `Delete` button on the firewalls action table menu.
 
 :::warning
 
