--- a/docs/06-environment/08-alerts.mdx
+++ b/docs/06-environment/08-alerts.mdx
@@ -2,8 +2,8 @@
 title: Alerts
 ---
 
-Alerts serve as automated notifications that promptly inform operators about potential issues or deviations from normal
-behavior, enabling rapid response and resolution.
+Alerts are automated notifications that inform users about potential issues or deviations from normal behavior, enabling
+rapid response and resolution.
 
 You can access the alerts by navigating to `Application > Environment > Alerts`.
 
