--- a/docs/07-administration/01-overview.mdx
+++ b/docs/07-administration/01-overview.mdx
@@ -2,9 +2,8 @@
 title: Overview
 ---
 
-The administration interface in the Low-Ops Portal and instructions on managing users, teams, app templates, activity,
-and applications.
+The Low-Ops Portal administration interface helps you manage users, teams, app templates, and applications.
 
-You can access the administration interface by navigating to `Administration` in the Low-Ops Portal.
+Go to `Administration` in the Low-Ops Portal to access these features.
 
 <img src="/img/admin-icon.png" alt="Admin icon" className="image" />
