--- a/docs/07-administration/02-users.mdx
+++ b/docs/07-administration/02-users.mdx
@@ -2,36 +2,33 @@
 title: Users
 ---
 
-### Overview
+Manage users through the `Administration` interface.
 
-Low-Ops allow you to manage `Users` from `Administration` interface.
-
-You can access the `Users` by navigating to `Administration > Users`.
+Go to `Administration > Users` to access user management.
 
 <img src="/img/admin-users.png" alt="Administration Users" className="image" />
 
 ### Create User
 
-To create a new user, click on the `Create User` button and fill the form.
+Click the `Create User` button and fill out the form to add a new user.
 
 <img src="/img/create-user-dialog.png" alt="Create User Dialog" className="image" />
 
 ### User Details
 
-To view user details, click on the user name on the user table. You can `Reset Password` or view `User Teams` at this
-screen.
+Click a username in the table to view user details. Here you can `Reset Password` or check `User Teams`.
 
 <img src="/img/user-details.png" alt="User Details" className="image" />
 
 ### Delete User
 
-To delete a user, click on the `Delete` button on the down of user details page.
+Click the `Delete` button at the bottom of the user details page to remove a user.
 
 :::tip Best Practices
 
-- Use a strong, unique password for each new user
-- Inform the new user to change their password upon first login
-- Assign appropriate permissions to the new user based on their role
-- Regularly review and update user lists to maintain security
+- Use strong, unique passwords for each user
+- Ask users to change their password on first login
+- Assign permissions based on user roles
+- Regularly review and update user access
 
 :::
