--- a/docs/07-administration/03-teams.mdx
+++ b/docs/07-administration/03-teams.mdx
@@ -2,17 +2,14 @@
 title: Teams
 ---
 
-### Overview
+Teams help you manage users and their permissions. Each application has its own team.
 
-Teams are used to manage users and permissions. Teams are created for each application.
-
-You can access the `Teams` by navigating to `Administration > Teams`.
+Go to `Administration > Teams` to access team management.
 
 <img src="/img/teams.png" alt="Administration Teams" className="image" />
 
 ### Team Details
 
-You can add or remove users from the team to manage their permissions. Access the team details by clicking on the team
-in the teams table.
+Click a team in the table to manage its users and permissions.
 
 <img src="/img/teams-details.png" alt="Administration Teams" className="image" />
