--- a/docs/07-administration/04-applications.mdx
+++ b/docs/07-administration/04-applications.mdx
@@ -2,35 +2,33 @@
 title: Applications
 ---
 
-### Overview
-
-Applications are the core of the platform. When you open the Low-Ops you will see the applications you have access to.
+Applications are the core of the platform. When you open Low-Ops, you'll see all applications you have access to.
 
 <img src="/img/applications.png" alt="Administration Applications" className="image" />
 
 ### Create Application
 
-Applications can be create from 2 places:
+You can create applications in two ways:
 
-- From the `Create Application` button in the `applications/root` screen.
-- From the `Administration > Applications` screen.
+- Click the `Create Application` button on the `root` screen
+- Go to `Administration > Applications`
 
-Select the `Template` you want to use to create the application and input the `Name` and `Description`. If you can't see
-the template you want to use, you can create a new template from the `Administration > Templates` screen.
+Select your desired `Template`, then enter the `Name` and `Description`. If you don't see the template you need, create
+a new one. <a href="/docs/administration/app-templates">How to create a template</a>
 
 <img src="/img/create-app-1.png" alt="Create Application 1" className="image" />
 <img src="/img/create-app-2.png" alt="Create Application 2" className="image" />
 
 ### Application Details
 
-To view the application details, click on the application name in the applications table. Navigate to the application
-settings screen. `Application > Settings`. You can change the description of the application on that screen.
+To view application details, click the application name in the table. Go to `Application > Settings` to change the
+application description.
 
 <img src="/img/app-settings.png" alt="Application Settings" className="image" />
 
 ### Delete Application
 
-Applications can be create from 2 places:
+You can delete applications in two ways:
 
-- From the `Application > Settings` screen. Bottom of the screen have `Delete Application` button.
-- From the `Administration > Applications` screen. From the `Delete` button in the application table menu.
+- From `Application > Settings`: Click the `Delete Application` button at the bottom of the screen
+- From `Administration > Applications`: Click the `Delete` button in the application table menu
