--- a/docs/07-administration/05-app-templates.mdx
+++ b/docs/07-administration/05-app-templates.mdx
@@ -2,22 +2,25 @@
 title: Templates
 ---
 
-Templates are used to create applications. They are used to define the structure of the application. Low-Ops comes with
-predefined templates, but you can also create your own templates.
+Templates help you create applications by defining their structure. Low-Ops provides predefined templates, and you can
+also create custom ones.
 
 <img src="/img/templates-screen.png" alt="Templates Screen" className="image" />
 
 ### Create Template
 
-To create a new template, navigate to the `Administration > Templates` screen.
+Go to `Administration > Templates` to create a new template. Click `Upload Template` button and fill in the required
+fields.
+
+:::note
+
+Choose the correct template type (e.g., `Mendix` for Mendix applications, `NextJS` for NextJS applications). Use
+`Generic` type if no specific type matches your template.
+
+:::
 
 <img src="/img/upload-template.png" alt="Upload Template" className="image" />
 
 ### Delete Template
 
-To delete a template, navigate to the `Administration > Templates` screen and click on the `Delete` button in the
-template table menu.
-
-<!-- Upload templates in `Administration > Templates`.
-Choose the correct template type (e.g., `Mendix` for Mendix applications). Use `Generic` type if no specific type
-matches your template. -->
+To delete a template, go to `Administration > Templates` and click the `Delete` button in the template table menu.
