--- a/docs/07-administration/06-activity.mdx
+++ b/docs/07-administration/06-activity.mdx
@@ -2,6 +2,4 @@
 title: Activity
 ---
 
-### Overview
-
-Activity is designed for recording `events` and `actions` happened inside administration interface.
+The Activity section tracks and displays all events and actions that occur within the administration interface.
