--- a/docs/05-application/04-activity.mdx
+++ b/docs/05-application/04-activity.mdx
@@ -2,12 +2,16 @@
 title: Activity
 ---
 
-Activity is designed for recording `events` and `actions` within the system for the purpose of `Monitoring`,
-`Analyzing`, and `Ensuring accountability`.
+Activity is designed for recording `events` and `actions` within the system for the purpose of `monitoring`,
+`analyzing`, and `ensuring accountability`.
 
-Activity tab captures information about activities such as: - Application onboarding - Application configuration
-changes - Data backups and restore actions - Application pipeline triggers on commits to repository - Other significant
-events within the platform or applications
+The Activity tab captures information about activities such as:
+
+- Application onboarding
+- Application configuration changes
+- Data backups and restore actions
+- Application pipeline triggers on commits to repository
+- Other significant events within the platform or applications
 
 <img src="/img/activity-screen.png" alt="Activity Screen" className="image" />
 
