--- a/docs/06-environment/05-logs.mdx
+++ b/docs/06-environment/05-logs.mdx
@@ -4,8 +4,8 @@ title: Logs
 
 import ReDeployLink from "@site/src/components/ReDeployLink";
 
-Logs displays application logs for the selected environment. You can access the logs by navigating to
-`Application > Environment > Logs`. Logs are refreshed every `10 seconds`, so you can see the latest logs.
+Logs display application logs for the selected environment. You can access the logs by navigating to
+`Application > Environment > Logs`. Logs are refresh every `10 seconds`, so you can see the latest logs.
 
 <img src="/img/logs.png" alt="Logs" className="image" />
 
@@ -13,7 +13,7 @@ Logs displays application logs for the selected environment. You can access the 
 
 Low-Ops allows you to configure Mendix log levels for each environment.
 
-In the logs screen, click on `Configure Log Levels` button to configure the log levels.
+In the logs screen, click the `Configure Log Levels` button to configure the log levels.
 
 You can add, edit or delete log levels. Log levels have a predefined `log node`, `level` and `description` (optional).
 
