--- a/docs/06-environment/09-variables.mdx
+++ b/docs/06-environment/09-variables.mdx
@@ -2,8 +2,8 @@
 title: Variables
 ---
 
-The environment variables are used to configure the environment. You can add, edit, and delete the environment
-variables.
+Environment variables let you configure how your application behaves in different environments. You can add, edit, and
+delete environment variables as needed.
 
 You can access the environment variables by navigating to `Application > Environment > Variables`.
 
@@ -11,12 +11,11 @@ You can access the environment variables by navigating to `Application > Environ
 
 ### App Environment Variables
 
-Variables extracted from app source code and value can't be changed can be changed during deployment. Example:
-`DatabaseUrl`, `S3_ENDPOINT` and etc.
+Variables extracted from app source code and value can't be changed. Example: `DatabaseUrl`, `S3_ENDPOINT` etc.
 
 ### Framework Environment Variables
 
-Variables defined by Low-Ops following best practices of specific frameworks. Example: `Runtime settings` and
+Variables defined by Low-Ops that follow best practices of specific frameworks. Example: `Runtime settings` and
 `Log levels` for Mendix Applications.
 
 ### Custom Environment Variables
