support and high level architecture

--- a/docs/08-platform/02-authantications.mdx
+++ b/docs/08-platform/02-authantications.mdx
@@ -1,3 +1,9 @@
 ---
 title: Authantication
 ---
+
+Low-Ops uses keycloak for authentication and authorization.
+
+Keycloak is an open-source Identity and Access Management solution that provides a centralized login system for
+applications. It supports various protocols such as OpenID Connect, OAuth 2.0, and SAML, and can be easily integrated
+with existing systems.
